{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 18,
  "lineage": "e79d146d-c018-d4aa-94c3-d4982ff81fe5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "trend_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01120c466ffc6b8d5",
            "arn": "arn:aws:ec2:us-east-1:517798688958:elastic-ip/eipalloc-01120c466ffc6b8d5",
            "association_id": "eipassoc-0ae94c94afbfd2616",
            "domain": "vpc",
            "id": "eipalloc-01120c466ffc6b8d5",
            "instance": "i-078b8ccbf7659520b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03c9d156288da4017",
            "private_dns": "ip-10-0-1-14.ec2.internal",
            "private_ip": "10.0.1.14",
            "public_dns": "ec2-52-0-208-173.compute-1.amazonaws.com",
            "public_ip": "52.0.208.173",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "trend-eip"
            },
            "tags_all": {
              "Name": "trend-eip"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.trend_ec2_profile",
            "aws_iam_role.trend_ec2_role",
            "aws_instance.trend_jenkins",
            "aws_security_group.trend_sg",
            "aws_subnet.trend_subnet",
            "aws_vpc.trend_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "trend_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0fc5d935ebf8bc3bc",
            "arn": "arn:aws:ec2:us-east-1:517798688958:instance/i-078b8ccbf7659520b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "trend-ec2-profile",
            "id": "i-078b8ccbf7659520b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Proj-02",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03c9d156288da4017"
              }
            ],
            "primary_network_interface_id": "eni-03c9d156288da4017",
            "private_dns": "ip-10-0-1-14.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.14",
            "public_dns": "ec2-13-220-221-201.compute-1.amazonaws.com",
            "public_ip": "13.220.221.201",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-057c7bb6c2adb3be9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f3670866967fa7a7",
            "tags": {
              "Name": "trend-jenkins"
            },
            "tags_all": {
              "Name": "trend-jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-089bcd823aadd254d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "517798688958",
            "id": "i-078b8ccbf7659520b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.trend_ec2_profile",
            "aws_iam_role.trend_ec2_role",
            "aws_security_group.trend_sg",
            "aws_subnet.trend_subnet",
            "aws_vpc.trend_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "trend_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517798688958:internet-gateway/igw-0675eb3a73716ac59",
            "id": "igw-0675eb3a73716ac59",
            "owner_id": "517798688958",
            "region": "us-east-1",
            "tags": {
              "Name": "trend-igw"
            },
            "tags_all": {
              "Name": "trend-igw"
            },
            "vpc_id": "vpc-0a7ee7b001008f952"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.trend_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "trend_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517798688958:route-table/rtb-0fa222c5822fbe8a8",
            "id": "rtb-0fa222c5822fbe8a8",
            "owner_id": "517798688958",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0675eb3a73716ac59",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "trend-rt"
            },
            "tags_all": {
              "Name": "trend-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7ee7b001008f952"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "517798688958",
            "id": "rtb-0fa222c5822fbe8a8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.trend_igw",
            "aws_vpc.trend_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "trend_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b19e164b093a8fb5",
            "region": "us-east-1",
            "route_table_id": "rtb-0fa222c5822fbe8a8",
            "subnet_id": "subnet-0f3670866967fa7a7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.trend_igw",
            "aws_route_table.trend_rt",
            "aws_subnet.trend_subnet",
            "aws_vpc.trend_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "trend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517798688958:security-group/sg-089bcd823aadd254d",
            "description": "Allow SSH and Jenkins access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-089bcd823aadd254d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "trend-sg",
            "name_prefix": "",
            "owner_id": "517798688958",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "trend-sg"
            },
            "tags_all": {
              "Name": "trend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7ee7b001008f952"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "517798688958",
            "id": "sg-089bcd823aadd254d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.trend_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "trend_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517798688958:subnet/subnet-0f3670866967fa7a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3670866967fa7a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "517798688958",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "trend-subnet"
            },
            "tags_all": {
              "Name": "trend-subnet"
            },
            "vpc_id": "vpc-0a7ee7b001008f952"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "517798688958",
            "id": "subnet-0f3670866967fa7a7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.trend_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "trend_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517798688958:vpc/vpc-0a7ee7b001008f952",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a232e2bbe7f60ed4",
            "default_route_table_id": "rtb-08b0071563068e8a9",
            "default_security_group_id": "sg-076e89ddbec51ecdd",
            "dhcp_options_id": "dopt-042137bc5ddfdf613",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a7ee7b001008f952",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08b0071563068e8a9",
            "owner_id": "517798688958",
            "region": "us-east-1",
            "tags": {
              "Name": "trend-vpc"
            },
            "tags_all": {
              "Name": "trend-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}